<resources>
    <string name="app_name">Study Connect</string>
    <string name="register">REGISTER</string>
    <string name="matching">Matching</string>
    <string name="matching_courses">Matching Courses</string>
    <string name="homepage">Home Page</string>
    <string name="seekHelp">Seek Help</string>
    <string name="yourSchedule">Your Schedule</string>
    <string name="provideHelp">Provide Help</string>
    <string name="addProvideHelpSubject">Add Provide Help Subject</string>
    <string name="schedule">Schedule</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="chooseOption">Choose User Role</string>
    <string name="noRequests">No Requests</string>
    <string name="requestHelp">New Request for Help</string>
    <string name="addNewRequest">Add New Request</string>
    <string name="message">Message</string>
    <string name="username">Username</string>
    <string name="write_message_here">Write message here</string>
    <string name="addNewEvent">Add New Event</string>
    <string name="typeNoteHere">Type note here</string>
    <string name="courseCode">Course Title</string>
    <string name="eventTitle">Title</string>
    <string name="endTime">End Time</string>
    <string name="startTime">Start Time</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="daysOfWeek">Day of the week</string>
    <string name="notAccepted">Not Accepted</string>
    <string name="course">Course: </string>
    <string name="major">Major</string>
    <string name="addImage">Add Image</string>
    <string name="deleteProfile">Delete Profile</string>
    <string name="editMajor">Edit major</string>
    <string name="yourname">Your Name</string>
    <string name="both">Both</string>
    <string name="yourEmail">your.email@student.tue.nl</string>
    <string name="degree">Degree</string>
    <string name="editDegree">Edit degree</string>
    <string name="addDescription">Edit description</string>
    <string name="editCourses">Edit Courses</string>
    <string name="providesHelp">Provides Help For:</string>
    <string name="allCourses">All Courses</string>
    <string name="allPHCourses">Provide Help Courses</string>
    <string name="MatchingPage">Matching</string>
    <string name="MessagingPage">Messaging</string>
    <string name="profileBio">Bio:</string>
    <string name="play">Play</string>
</resources>